# tiralabra

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
docs/: implementation_document.md  project_specification.md  testing_document.md
docs/reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: app.py  performance_test.py
src/services/: backtracker.py  kruskal.py  logic.py
src/tests/: maze_correctness_test.py  maze_generation_test.py  maze_perfectness_test.py
src/ui/: main.py  maze.py  navigation.py
