[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Joonas Ahovalli <joonas.ahovalli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
pylint = "^2.16.1"
pytest = "^7.2.1"
coverage = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
